# securo

./: README.md  docker-compose.prod.yml  docker-compose.yml
backend/: pyproject.toml
backend/alembic/versions/: 018_transaction_attachments.py  018_update_default_categories.py  019_payees.py  019_update_default_categories.py  020_app_settings.py  021_user_totp_fields.py  022_goals.py  023_goals_initial_amount.py  024_goals_asset_tracking.py
backend/app/: main.py
backend/app/api/: accounts.py  admin.py  attachments.py  custom_auth.py  goals.py  import_logs.py  import_transactions.py  payees.py  settings.py  transactions.py  two_factor.py
backend/app/core/: auth.py  config.py  rate_limit.py  redis.py
backend/app/models/: __init__.py  app_settings.py  goal.py  payee.py  transaction.py  transaction_attachment.py  user.py
backend/app/schemas/: admin.py  (+7 more)
backend/tests/: conftest.py  test_accounts_api.py  test_admin_api.py  test_admin_service.py  test_asset_service.py  test_attachment_service.py  test_attachments_api.py  test_category_groups_api.py  test_category_service.py  test_connection_service.py  test_connections_api.py  test_currencies_api.py  test_dashboard_service.py  test_export_api.py  test_goals_api.py  test_import_api.py  test_import_service.py  test_local_storage.py  test_payee_service.py  test_payees_api.py  test_providers.py  test_rate_limit.py  test_recurring_transaction_service.py  test_report_service.py  test_rule_engine.py  test_transaction_service.py  test_transactions_api.py  test_transfer_api.py  test_transfer_detection.py  test_two_factor.py
(+49 files in other folders)
